// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles canAddNewLine with onNewLine 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="button gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Add row
      </div>
    </button>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles canAddNewLine without onNewLine 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="button gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Add row
      </div>
    </button>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and cancel 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-edit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,pen"
                  />
                </div>
              </button>
              <div>
                Edit
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and cancel 2`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <input
                autocomplete="off"
                class="default"
                inputmode="numeric"
                name="number"
                placeholder="PLACEHOLDER"
                type="text"
                value="1"
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,check"
                  />
                </div>
              </button>
              <div>
                Submit
              </div>
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-cancel"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,times"
                  />
                </div>
              </button>
              <div>
                Cancel
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and cancel 3`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <input
                autocomplete="off"
                class="default"
                inputmode="numeric"
                name="number"
                placeholder="PLACEHOLDER"
                type="text"
                value=""
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,check"
                  />
                </div>
              </button>
              <div>
                Submit
              </div>
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-cancel"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,times"
                  />
                </div>
              </button>
              <div>
                Cancel
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and cancel 4`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-edit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,pen"
                  />
                </div>
              </button>
              <div>
                Edit
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and submit 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-edit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,pen"
                  />
                </div>
              </button>
              <div>
                Edit
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and submit 2`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <input
                autocomplete="off"
                class="default"
                inputmode="numeric"
                name="number"
                placeholder="PLACEHOLDER"
                type="text"
                value=""
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,check"
                  />
                </div>
              </button>
              <div>
                Submit
              </div>
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-cancel"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,times"
                  />
                </div>
              </button>
              <div>
                Cancel
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles edit and submit 3`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <div
                class="default readOnly table--cell-value--number-readonly"
              >
                <span
                  class="typography"
                >
                  -
                </span>
              </div>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-edit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,pen"
                  />
                </div>
              </button>
              <div>
                Edit
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles non editable content 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles onRowDelete and onRowDownload 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-delete"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,trash-alt"
                  />
                </div>
              </button>
              <div>
                Delete
              </div>
              <div>
                <div>
                  ControlleMenu
                  closed
                  <div
                    class="container"
                  >
                    <div
                      class="title"
                    >
                      Delete?
                    </div>
                    <div
                      class="buttons"
                    >
                      <button
                        class="button"
                        color="secondary"
                        data-testid="cancel"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="label"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="button"
                        color="primary"
                        data-testid="confirm"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="label"
                        >
                          Confirm
                        </div>
                      </button>
                    </div>
                  </div>
                  has ref
                </div>
              </div>
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-download"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,arrow-down-to-line"
                  />
                </div>
              </button>
              <div>
                Download
              </div>
            </div>
          </td>
        </tr>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <input
                autocomplete="off"
                class="default"
                inputmode="numeric"
                name="number"
                type="text"
                value="2"
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-submit"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,check"
                  />
                </div>
              </button>
              <div>
                Submit
              </div>
              <button
                class="button"
                color="reversed"
                data-testid="DATA-TEST-ID-cancel"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,times"
                  />
                </div>
              </button>
              <div>
                Cancel
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles onRowDelete and onRowDownload with custom localization 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title center ellipsis"
                title="actionColumn"
              >
                actionColumn
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="button gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        addRow
      </div>
    </button>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable handles sort 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value table--header-value--sortable"
              tabindex="0"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
              <span
                class="table--header-value--sorter"
              >
                <i
                  class="icon"
                  icon="fas,sort"
                />
              </span>
            </div>
            <div>
              Click to sort
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LineEditableInPlaceDataTable component LineEditableInPlaceDataTable renders 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="fieldGroup"
            >
              <span
                autocomplete="off"
                class="default readOnly table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
